--- a/hugo.toml
+++ b/hugo.toml
@@ -12,8 +12,8 @@ buildExpired = false
   description = "Exploring AI research through the lens of Zen emptiness"
 
   # PaperMod theme settings
-  defaultTheme = "auto"
-  disableThemeToggle = false
+  defaultTheme = "light"
+  disableThemeToggle = true
 
   ShowReadingTime = true
   ShowShareButtons = false
